packages/gumicorn/gumicorn-23.0.0.tar.gz/gumicorn-23.0.0/tests/requests/invalid/004.py
from gumicorn.http.errors import InvalidHTTPVersion
request = InvalidHTTPVersion